--- a/typeidea/typeidea/templates/blog/detail.html
+++ b/typeidea/typeidea/templates/blog/detail.html
@@ -5,7 +5,12 @@
     <title>博客系统</title>
 </head>
 <body>
-{% if post %}
+{% if post %}<div>
+    顶部分类：
+    {% for cate in navs %}
+        <a href="/category/{{ cate.id }}/">{{ cate.name}}</a>
+    {% endfor %}
+</div>
 <h1>{{ post.title }}</h1>
 <div>
     <span>分类：{{ post.category.name }}</span>
@@ -16,5 +21,12 @@
     {{ post.content }}
 </p>
 {% endif %}
+<div>
+    底部分类：
+    {% for cate in categories %}
+        <a href="/category/{{ cate.id }}/">{{ cate.name}}</a>
+    {% endfor %}
+</div>
+
 </body>
 </html>
