--- a/typeidea/typeidea/templates/blog/detail.html
+++ b/typeidea/typeidea/templates/blog/detail.html
@@ -1,32 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>博客系统</title>
-</head>
-<body>
-{% if post %}<div>
-    顶部分类：
-    {% for cate in navs %}
-        <a href="/category/{{ cate.id }}/">{{ cate.name}}</a>
-    {% endfor %}
-</div>
-<h1>{{ post.title }}</h1>
-<div>
-    <span>分类：{{ post.category.name }}</span>
-    <span>作者：{{ post.owner.username }}</span>
-</div>
-<hr/>
-<p>
-    {{ post.content }}
-</p>
-{% endif %}
-<div>
-    底部分类：
-    {% for cate in categories %}
-        <a href="/category/{{ cate.id }}/">{{ cate.name}}</a>
-    {% endfor %}
-</div>
+{% extends"./base.html"%}
+{% block title %}{{ post.title }}{% endblock %}
 
-</body>
-</html>
+{% block main %}
+    {% if post %}
+    <h1>{{ post.title }}</h1>
+    <div>
+        <span>分类：{{ post.category.name }}</span>
+        <span>作者：{{ post.owner.username }}</span>
+    </div>
+    <hr/>
+    <p>
+        {{ post.content }}
+    </p>
+    {% endif %}
+{% endblock %}
