--- a/typeidea/typeidea/themes/default/templates/blog/base.html
+++ b/typeidea/typeidea/themes/default/templates/blog/base.html
@@ -1,19 +1,10 @@
 <!DOCTYPE HTML>
-<html lang="en">
-<head>
-    <title>Typeidea blog - by the5fire</title>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.css">
-    <title>{% block title %}首页{% endblock %}- typeidea博客系统</title>
-    <style>
-        .post {
-            margin-bottom: 5px;
-        }
-    </style>
-</head>
-<body>
-<div class="container head">
+<html>
+    <head>
+        <meta charset="utf-8"/>
+        <title>{% block title %}首页{% endblock %}- typeidea博客系统</title>
+    </head>
+    <body>
     <div>顶部分类:
         {% for cate in navs %}
         <a href="{% url 'category-list' cate.id %}">{{ cate.name }}</a>
@@ -34,9 +25,10 @@
     <hr/>
     <div>侧边栏展示:
         {% for sidebar in sidebars %}
-        <h4>{{ sidebar.title }}</h4>
-        {{ sidebar.content_html }}
+            <h4>{{ sidebar.title }}</h4>
+            {{ sidebar.content_html }}
         {% endfor %}
     </div>
-</body>
+    </body>
 </html>
+
