--- a/typeidea/typeidea/themes/default/templates/blog/detail.html
+++ b/typeidea/typeidea/themes/default/templates/blog/detail.html
@@ -1,13 +1,16 @@
+{% extends "./base.html" %}
+{% block title %} {{ post.title }} {% endblock %}
 
-{% if post %}
-<h1>{{ post.title }}</h1>
-<div>
-    <span>分类：{{ post.category.name }}</span>
-    <span>作者：{{ post.owner.username }}</span>
-</div>
-<hr/>
-<p>
-    {{ post.content }}
-</p>
-{% endif %}
-
+{% block main %}
+    {% if post %}
+    <h1>{{ post.title }}</h1>
+    <div>
+        <span>分类:{{ post.category.name }}</span>
+        <span>作者:{{ post.owner.username }}</span>
+    </div>
+    <hr/>
+    <p>
+        {{ post.content }}
+    </p>
+    {% endif %}
+{% endblock %}
