--- a/typeidea/typeidea/themes/bootstrap/templates/blog/base.html
+++ b/typeidea/typeidea/themes/bootstrap/templates/blog/base.html
@@ -1,15 +1,17 @@
+{% load static %}
 <!DOCTYPE HTML>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <title>{% block title %}首页{% endblock %}- typeidea博客系统</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
     <style>
-    .post {
-        margin-bottom: 5px;
-    }
+        .post {
+            margin-bottom: 5px;
+        }
     </style>
-  </head>
+</head>
   <body>
 	<div class="container head">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -22,8 +24,8 @@
               </li>
             {% endfor %}
             </ul>
-            <form class="form-inline my-2 my-lg-0" action='GET'>
-              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <form class="form-inline" action='/search/' method="GET">
+              <input class="form-control" type="search" name="keyword" placeholder="Search" aria-label="Search" value="{{ keyword }}">
               <button class="btn btn-outline-success" type="submit">搜索</button>
             </form>
           </div>
