--- a/typeidea/typeidea/themes/bootstrap/templates/comment/result.html
+++ b/typeidea/typeidea/themes/bootstrap/templates/comment/result.html
@@ -27,6 +27,7 @@
                 {% endfor %}
             </ul>
             <a href="javascript:window.history.back()">返回</a>
+        {% endif %}
     </div>
 </body>
 </html>
