--- a/typeidea/typeidea/themes/bootstrap/templates/blog/detail.html
+++ b/typeidea/typeidea/themes/bootstrap/templates/blog/detail.html
@@ -1,6 +1,11 @@
 {% extends "./base.html" %}
+{% load comment_block %}
 {% block title %} {{ post.title }} {% endblock %}
-
+{% block extra_head %}
+<link rel="stylesheet" href="https://cdn.bootcss.com/highlight.js/9.12.0/styles/googlecode.min.css">
+<script src="https://cdn.bootcss.com/highlight.js/9.12.0/highlight.min.js"></script>
+<script>hljs.initHighlightingOnLoad();</script>
+{% endblock %}
 {% block main %}
 {% if post %}
 <h1>{{ post.title }}</h1>
@@ -11,31 +16,13 @@
 </div>
 <hr/>
 <p>
-    {{ post.content }}
+    {% autoescape off%}
+    {{ post.content_html }}
+    {% endautoescape %}
 </p>
 {% endif %}
-<hr/>
-<div class="comment">
-    <form class="form-group" action="/comment/" method="POST">
-        {% csrf_token %}
-        <input name="target" type="hidden" value="{{ request.path }}">
-        {{ comment_form }}
-        <input type="submit" value="写好了">
-    </form>
-
-    <!--评论列表-->
-    <ul class="list-group">
-        {% for comment in comment_list %}
-        <li class="list-group-item">
-            <div class="nickname">
-                <a href="{{ comment.website }}">{{ comment.nickname }}</a>
-                <span>{{ comment.created_time }}</span>
-            </div>
-            <div class="comment-content">
-                {{ comment.content }}
-            </div>
-        </li>
-        {% endfor %}
-    </ul>
-</div>
+<!-- request.path  得到结果 /comment/1-->
+{% comment_block request.path %}
 {% endblock %}
+
+
