--- a/typeidea/typeidea/themes/bootstrap/templates/blog/base.html
+++ b/typeidea/typeidea/themes/bootstrap/templates/blog/base.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>{% block title %}首页{% endblock %}- typeidea博客系统</title>
+    <title>{% block title %}首页{% endblock %}博客系统</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
     <style>
@@ -33,7 +33,7 @@
           </div>
         </nav>
         <div class="jumbotron">
-            <h1 class="display-4">Typeidea</h1>
+            <h1 class="display-4">博客系统</h1>
             <p class="lead">基于Django的多人博客系统</p>
         </div>
 	</div>
